--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "essential-ui",
   "theme": "ui",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "A simple UI theme for the atom code editor.",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
   "repository": "https://github.com/naminho/essential-ui",
-  "keywords": ["ui", "theme", "simple", "essential", "atom"],
-  "license": "MIT",
-  "engines": {
-    "atom": ">=1.0.0 <2.0.0"
-  }
+  "keywords": [
+    "ui",
+    "theme",
+    "simple",
+    "essential",
+    "atom"
+  ],
+  "license": "MIT"
 }
